--- a/templates/about.html
+++ b/templates/about.html
@@ -3,3 +3,5 @@
 <p1>I hope that you find this tool useful and wish me luck on my way to one million dollars.</p1>
 <br />
 <br /><a href="{% url  'home' %}">Return Home</a>
+
+Copyright 2019
